--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "www",
   "version": "1.0.0",
-  "main": "Header.js",
+  "main": "main.js",
   "scripts": {
     "start":"live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
